# gluebox

./: .gitignore  Cargo.toml  README.md  build.rs  cliff.toml  flake.nix  gluebox.example.toml
.github/workflows/: deploy.yml
assets/: og-card.typ  story-card.typ
docs/: TIKTOK_CONNECTOR_SPEC.md
docs/superpowers/plans/: 2026-03-24-gluebox-refactor.md  friday-weekly-montage-pipeline.md  tiktok-chart-video-pipeline.md  x-bluesky-video-crosspost.md
docs/superpowers/specs/: 2026-03-24-gluebox-refactor-design.md
hosts/gluebox-prod/: default.nix  hardware-configuration.nix
patches/matrix-sdk/: Cargo.toml
patches/matrix-sdk/src/: lib.rs
scripts/: set-meta-credentials.nu  set-storj-credentials.nu  set-x-credentials.nu  setup-storj.nu
src/: config.rs  daemon.rs  db.rs  gateway.rs  gateway_socket.rs  gateway_tools.rs  gluebox_capnp.rs  main.rs  mcp.rs  power.rs  registry.rs  socket.rs
src/connectors/: affine.rs  anytype.rs  calendar.rs  char_sessions.rs  documenso.rs  github.rs  linear.rs  matrix.rs  mod.rs  opencode.rs  samaya.rs  session_watcher.rs
src/connectors/stonkwatch_social/: bluesky.rs  chart_video.rs  content.rs  facebook.rs  instagram.rs  meta.rs  mod.rs  og_image.rs  pipeline.rs  platform.rs  replica.rs  stitcher.rs  storj.rs  tiktok.rs  x.rs
src/openclaw/: mod.rs
src/proto/: gluebox.capnp
src/triggers/: anytype_to_linear.rs  documenso_handlers.rs  error_rollup.rs  feedback.rs  friday_digest.rs  github_to_linear.rs  lecture_recorded.rs  linear_to_anytype.rs  linear_to_github.rs  mod.rs  posting_heartbeat.rs  reconcile.rs  session_import.rs  study_plan.rs  to_matrix.rs  trending_to_social.rs
src/tui/: event_feed.rs  layout.rs  mod.rs  sparkline.rs  waveform.rs
src/webhook/: mod.rs  verify.rs
