[package]
name = "gluebox"
version = "0.1.0"
edition = "2024"

[dependencies]
gluebox-core = { path = "../gluebox-core" }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
turso = { git = "https://github.com/tursodatabase/turso", branch = "main", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22"
rand = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
url = "2"
toml = "0.8"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
urlencoding = "2"
matrix-sdk = { version = "0.16", default-features = false, features = ["e2e-encryption", "sqlite", "rustls-tls"] }
dirs = "6"
tokio-util = { version = "0.7", features = ["rt"] }
capnp = "0.25"
notify = "7"
ratatui = "0.30"
crossterm = "0.28"
rmcp = { version = "1.1", features = ["server", "transport-io"] }
libc = "0.2"
tempfile = "3"
chrono-tz = "0.10"
futures = "0.3"

[build-dependencies]
capnpc = "0.25"

[patch.crates-io]
matrix-sdk = { path = "patches/matrix-sdk" }

[profile.release]
strip = true
lto = false
